--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Stud-Co-Voting-test
+application.vendor=Lipman
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,104 +27,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Stud-Co-Voting-test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.activation.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/activation.jar
-file.reference.gdata-analytics-2.1.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-analytics-2.1.jar
-file.reference.gdata-analytics-meta-2.1.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-analytics-meta-2.1.jar
-file.reference.gdata-appsforyourdomain-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-appsforyourdomain-1.0.jar
-file.reference.gdata-appsforyourdomain-meta-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-appsforyourdomain-meta-1.0.jar
-file.reference.gdata-base-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-base-1.0.jar
-file.reference.gdata-blogger-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-blogger-2.0.jar
-file.reference.gdata-blogger-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-blogger-meta-2.0.jar
-file.reference.gdata-books-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-books-1.0.jar
-file.reference.gdata-books-meta-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-books-meta-1.0.jar
-file.reference.gdata-calendar-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-calendar-2.0.jar
-file.reference.gdata-calendar-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-calendar-meta-2.0.jar
-file.reference.gdata-client-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-client-1.0.jar
-file.reference.gdata-client-meta-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-client-meta-1.0.jar
-file.reference.gdata-codesearch-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-codesearch-2.0.jar
-file.reference.gdata-codesearch-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-codesearch-meta-2.0.jar
-file.reference.gdata-contacts-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-contacts-3.0.jar
-file.reference.gdata-contacts-meta-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-contacts-meta-3.0.jar
-file.reference.gdata-core-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-core-1.0.jar
-file.reference.gdata-docs-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-docs-3.0.jar
-file.reference.gdata-docs-meta-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-docs-meta-3.0.jar
-file.reference.gdata-finance-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-finance-2.0.jar
-file.reference.gdata-finance-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-finance-meta-2.0.jar
-file.reference.gdata-gtt-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-gtt-2.0.jar
-file.reference.gdata-gtt-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-gtt-meta-2.0.jar
-file.reference.gdata-health-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-health-2.0.jar
-file.reference.gdata-health-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-health-meta-2.0.jar
-file.reference.gdata-maps-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-maps-2.0.jar
-file.reference.gdata-maps-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-maps-meta-2.0.jar
-file.reference.gdata-media-1.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-media-1.0.jar
-file.reference.gdata-photos-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-photos-2.0.jar
-file.reference.gdata-photos-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-photos-meta-2.0.jar
-file.reference.gdata-projecthosting-2.1.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-projecthosting-2.1.jar
-file.reference.gdata-projecthosting-meta-2.1.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-projecthosting-meta-2.1.jar
-file.reference.gdata-sidewiki-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-sidewiki-2.0.jar
-file.reference.gdata-sidewiki-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-sidewiki-meta-2.0.jar
-file.reference.gdata-sites-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-sites-2.0.jar
-file.reference.gdata-sites-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-sites-meta-2.0.jar
-file.reference.gdata-spreadsheet-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-spreadsheet-3.0.jar
-file.reference.gdata-spreadsheet-meta-3.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-spreadsheet-meta-3.0.jar
-file.reference.gdata-webmastertools-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-webmastertools-2.0.jar
-file.reference.gdata-webmastertools-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-webmastertools-meta-2.0.jar
-file.reference.gdata-youtube-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-youtube-2.0.jar
-file.reference.gdata-youtube-meta-2.0.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/gdata-youtube-meta-2.0.jar
-file.reference.guava-11.0.2.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/guava-11.0.2.jar
-file.reference.jsr305.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/jsr305.jar
-file.reference.mail.jar=/Users/Lipman/Developer-Files/ucls-stud-co-voting/+libs/mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.gdata-analytics-2.1.jar}:\
-    ${file.reference.gdata-analytics-meta-2.1.jar}:\
-    ${file.reference.gdata-appsforyourdomain-1.0.jar}:\
-    ${file.reference.gdata-appsforyourdomain-meta-1.0.jar}:\
-    ${file.reference.gdata-base-1.0.jar}:\
-    ${file.reference.gdata-blogger-2.0.jar}:\
-    ${file.reference.gdata-blogger-meta-2.0.jar}:\
-    ${file.reference.gdata-books-1.0.jar}:\
-    ${file.reference.gdata-books-meta-1.0.jar}:\
-    ${file.reference.gdata-calendar-2.0.jar}:\
-    ${file.reference.gdata-calendar-meta-2.0.jar}:\
-    ${file.reference.gdata-client-1.0.jar}:\
-    ${file.reference.gdata-client-meta-1.0.jar}:\
-    ${file.reference.gdata-codesearch-2.0.jar}:\
-    ${file.reference.gdata-codesearch-meta-2.0.jar}:\
-    ${file.reference.gdata-contacts-3.0.jar}:\
-    ${file.reference.gdata-contacts-meta-3.0.jar}:\
-    ${file.reference.gdata-core-1.0.jar}:\
-    ${file.reference.gdata-docs-3.0.jar}:\
-    ${file.reference.gdata-docs-meta-3.0.jar}:\
-    ${file.reference.gdata-finance-2.0.jar}:\
-    ${file.reference.gdata-finance-meta-2.0.jar}:\
-    ${file.reference.gdata-gtt-2.0.jar}:\
-    ${file.reference.gdata-gtt-meta-2.0.jar}:\
-    ${file.reference.gdata-health-2.0.jar}:\
-    ${file.reference.gdata-health-meta-2.0.jar}:\
-    ${file.reference.gdata-maps-2.0.jar}:\
-    ${file.reference.gdata-maps-meta-2.0.jar}:\
-    ${file.reference.gdata-media-1.0.jar}:\
-    ${file.reference.gdata-photos-2.0.jar}:\
-    ${file.reference.gdata-photos-meta-2.0.jar}:\
-    ${file.reference.gdata-projecthosting-2.1.jar}:\
-    ${file.reference.gdata-projecthosting-meta-2.1.jar}:\
-    ${file.reference.gdata-sidewiki-2.0.jar}:\
-    ${file.reference.gdata-sidewiki-meta-2.0.jar}:\
-    ${file.reference.gdata-sites-2.0.jar}:\
-    ${file.reference.gdata-sites-meta-2.0.jar}:\
-    ${file.reference.gdata-spreadsheet-3.0.jar}:\
-    ${file.reference.gdata-spreadsheet-meta-3.0.jar}:\
-    ${file.reference.gdata-webmastertools-2.0.jar}:\
-    ${file.reference.gdata-webmastertools-meta-2.0.jar}:\
-    ${file.reference.gdata-youtube-2.0.jar}:\
-    ${file.reference.gdata-youtube-meta-2.0.jar}:\
-    ${file.reference.guava-11.0.2.jar}:\
-    ${file.reference.jsr305.jar}:\
-    ${file.reference.mail.jar}
+    ${libs.GoogleIntegration.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
