Bundled Google Libraries with Project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.GoogleIntegration.classpath}
+    ${libs.GoogleIntegration.classpath}:\
+    ${libs.Google.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,7 +68,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=Driver
+main.class=DriverOld
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
